# rustle-web

./: Cargo.toml  database.db  possible.txt
public/: index.html
src/: database.rs  game.rs  main.rs
