[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = { version = "4.3.0", features = ["cookies"] }
cookie = "0.17.0"
futures-util = "0.3.26"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
uuid = { version = "1.3.0", features = ["v4"] }
